# ibus-indic-table

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  ibus-indic-table.pc.in  ibus-indic-table.spec.in
autom4te.cache/: output.0  requests  traces.0  traces.1
data/: Makefile.am  Makefile.in
engine/: Makefile.am  Makefile.in  factory.py  ibus-engine-indic-table.in  ibus-indic-table-createdb.in  indic-table.xml.in.in  indic_table.py  main.py  tabcreatedb.py  tabdict.py  tabsqlitedb.py
icons/: Makefile.am  Makefile.in
icons/additional/: Makefile.am  Makefile.in
indic-tables/: Makefile.am  Makefile.in  template.txt
indic-tables/additional/: Makefile.am  Makefile.in
m4/: Makefile.am
po/: Makevars  ibus-indic-table.pot  zh_CN.po  zh_CN.po~  zh_TW.po~
